# FastSAM_Clip

./: .gitignore  .gitmodules  CMakeLists.txt
config/: clip.yaml
include/: common.h  lib.h
include/clip_instance/: clip_instance.h  common-clip.h
include/fastsam_instance/: common-fastsam.h  fastam_instance.h  fastsam.h  inference.hpp
nvblox/nvblox/: CMakeLists.txt
nvblox/nvblox/include/nvblox/: nvblox.h
nvblox/nvblox/include/nvblox/core/: color.h  color_hash.cuh  types.h  unified_vector.h
nvblox/nvblox/include/nvblox/core/internal/impl/: indexing_impl.h
nvblox/nvblox/include/nvblox/gpu_hash/: gpu_layer_view.h
nvblox/nvblox/include/nvblox/gpu_hash/internal/cuda/: gpu_indexing.cuh
nvblox/nvblox/include/nvblox/integrators/: projective_semantic_integrator.h  weighting_function.h
nvblox/nvblox/include/nvblox/integrators/internal/: projective_integrator.h
nvblox/nvblox/include/nvblox/integrators/internal/impl/: weighting_function_impl.h
nvblox/nvblox/include/nvblox/interpolation/internal/impl/: interpolation_2d_impl.h
nvblox/nvblox/include/nvblox/map/: common_names.h  layer.h  voxels.h
nvblox/nvblox/include/nvblox/map/internal/impl/: blox_impl.h
nvblox/nvblox/include/nvblox/mapper/: mapper.h
nvblox/nvblox/include/nvblox/mesh/: mesh.h  mesh_integrator.h
nvblox/nvblox/include/nvblox/sensors/: camera.h  csv_iterator.h  image.h
nvblox/nvblox/include/nvblox/sensors/internal/impl/: camera_impl.h  image_impl.h
nvblox/nvblox/src/core/: warmup.cu
nvblox/nvblox/src/gpu_hash/: gpu_layer_view.cu
nvblox/nvblox/src/integrators/: esdf_integrator.cu  projective_color_integrator.cu  projective_occupancy_integrator.cu  projective_semantic_integrator.cu  projective_tsdf_integrator.cu  view_calculator.cu
nvblox/nvblox/src/mapper/: mapper.cpp
nvblox/nvblox/src/mesh/: mesh_integrator_color.cu  mesh_integrator_semantic.cu
nvblox/nvblox/src/rays/: sphere_tracer.cu
nvblox/nvblox/src/sensors/: camera.cpp  color.cpp  color_hash.cu  csv_iterator.cpp  image.cu
nvblox/nvblox/src/utils/: timing.cpp
nvblox/nvblox/tests/: CMakeLists.txt  test_color_integrator.cpp  test_semantic_integrator.cpp  test_tsdf_integrator.cpp  test_tsdf_integrator_cuda_components.cpp
nvblox/nvblox/tests/include/nvblox/tests/: projective_semantic_integrator_components.h
nvblox/nvblox/tests/lib/cuda/: projective_semantic_integrator_components.cu
src/: sam_to_clip.cpp
src/clip_instance/: clip_instance.cpp  common-clip.cpp
src/fastsam_instance/: fastsam.cpp  fastsam_instance.cpp
test/: test_clip.cpp  test_clip_single.cpp  test_fastsam.cpp
(+3 files in other folders)
